--- a/backend/package.json
+++ b/backend/package.json
@@ -13,31 +13,33 @@
     "museum",
     "ai",
     "chatbot",
-    "mongodb"
+    "supabase",
+    "postgresql"
   ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
-    "jsonwebtoken": "^9.0.2",
+    "@supabase/supabase-js": "^2.89.0",
     "bcryptjs": "^2.4.3",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
+    "colors": "^1.4.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "sharp": "^0.33.1",
-    "qrcode": "^1.5.3",
     "nodemailer": "^6.9.7",
     "openai": "^4.20.1",
-    "compression": "^1.7.4",
-    "morgan": "^1.10.0",
-    "colors": "^1.4.0"
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "qrcode": "^1.5.3",
+    "sharp": "^0.33.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
